// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposals shows a message if still loading 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  loading="true"
  managed="true"
  subtitle=""
  title=""
>
  <!---->
   
  <modalpropose-stub
    denom="xxx"
  />
   
  <div>
    <div>
      <tmdatamsg-stub
        icon="gavel"
      >
        <div>
          
          No Governance Proposals
        
        </div>
         
        <div>
          
          There are currently no governance proposals to display. Click the
          'Create Proposal' button to submit the first network proposal!
        
        </div>
      </tmdatamsg-stub>
    </div>
  </div>
   
  <!---->
</tmpage-stub>
`;

exports[`PageProposals shows a message if there is nothing to display 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  managed="true"
  subtitle=""
  title=""
>
  <!---->
   
  <modalpropose-stub
    denom="xxx"
  />
   
  <div>
    <div>
      <tmdatamsg-stub
        icon="gavel"
      >
        <div>
          
          No Governance Proposals
        
        </div>
         
        <div>
          
          There are currently no governance proposals to display. Click the
          'Create Proposal' button to submit the first network proposal!
        
        </div>
      </tmdatamsg-stub>
    </div>
  </div>
   
  <!---->
</tmpage-stub>
`;

exports[`PageProposals shows a proposals table 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  managed="true"
  subtitle=""
  title=""
>
  <!---->
   
  <modalpropose-stub
    denom="lunies"
  />
   
  <tableproposals-stub
    proposals="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
   
  <!---->
</tmpage-stub>
`;
